--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
